# tree-sitter-typst

./: Cargo.toml  go.mod  package.json
bindings/go/: binding_test.go
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json
