[package]
name = "tree-sitter-typst"
description = "typst grammar for the tree-sitter parsing library"
version = "0.23.0"
keywords = ["incremental", "parsing", "typst"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/uben0/tree-sitter-typst"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[build-dependencies]
cc = "1.1.15"

[dev-dependencies]
tree-sitter = "0.23"
